# MedVTE

./: .gitignore  README.md  pyproject.toml
data/: medvte-test.jsonl  medvte-train.jsonl  medvte.jsonl
finetune/: README.md  arguments.py  data.py  engine.py  flava.py  logger.py  metrics.py  run.py
finetune/config/flava/: snlive-medvte-loose.json  snlive-medvte-strict.json  snlive.json
finetune/config/vilt/: snlive-medvte-loose.json  snlive-medvte-strict.json  snlive.json
